--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "medicare": {
+    "juno": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/medicare",
+            "outputPath": "dist/juno",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "medicare:build"
+            "browserTarget": "juno:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "medicare:build:production"
+              "browserTarget": "juno:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "medicare:build"
+            "browserTarget": "juno:build"
           }
         },
         "test": {
@@ -107,18 +107,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "medicare:serve"
+            "devServerTarget": "juno:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "medicare:serve:production"
+              "devServerTarget": "juno:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "medicare",
+  "defaultProject": "juno",
   "cli": {
     "analytics": "42df3fce-0efa-4ae7-aa7b-46eaeac0ecef"
   }
